--- a/fire-base.html
+++ b/fire-base.html
@@ -25,7 +25,7 @@
     <div class="container">
         <h2>Current Employees</h3>
         <div class="row">
-            <div id="employee-table"></div>
+            <div id="employee-table-div"></div>
         </div>
     </div>
 
