--- a/fire-base.html
+++ b/fire-base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
    <link rel="stylesheet" href="assets/css/style.css">
+   <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
    <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
     
 </head>
